New code and notes